Updated bootstrap theming for MBDA

--- a/less/forms.less
+++ b/less/forms.less
@@ -32,7 +32,7 @@ legend {
   // Small
   small {
     font-size: @baseLineHeight * .75;
-    color: @grayLight;
+    color: @gray;
   }
 }
 
@@ -84,7 +84,7 @@ input[type="color"],
   margin-bottom: @baseLineHeight / 2;
   font-size: @baseFontSize;
   line-height: @baseLineHeight;
-  color: @gray;
+  color: #000;
   .border-radius(@inputBorderRadius);
   vertical-align: middle;
 }
