--- a/less/labels-badges.less
+++ b/less/labels-badges.less
@@ -15,7 +15,7 @@
   vertical-align: baseline;
   white-space: nowrap;
   text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-  background-color: @grayLight;
+  background-color: @blue;
 }
 // Set unique padding and border-radii
 .label {
@@ -61,8 +61,8 @@ a {
   &-success           { background-color: @successText; }
   &-success[href]     { background-color: darken(@successText, 10%); }
   // Info (turquoise)
-  &-info              { background-color: @infoText; }
-  &-info[href]        { background-color: darken(@infoText, 10%); }
+  &-info              { background-color: @blueLighter; }
+  &-info[href]        { background-color: darken(@blueLighter, 10%); }
   // Inverse (black)
   &-inverse           { background-color: @grayDark; }
   &-inverse[href]     { background-color: darken(@grayDark, 10%); }
