--- a/less/type.less
+++ b/less/type.less
@@ -28,7 +28,7 @@ em      { font-style: italic; }
 cite    { font-style: normal; }
 
 // Utility classes
-.muted               { color: @grayLight; }
+.muted               { color: @gray; }
 a.muted:hover,
 a.muted:focus        { color: darken(@grayLight, 10%); }
 
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
   small {
     font-weight: normal;
     line-height: 1;
-    color: @grayLight;
+    color: @gray;
   }
 }
 
@@ -192,7 +192,7 @@ abbr.initialism {
 blockquote {
   padding: 0 0 0 15px;
   margin: 0 0 @baseLineHeight;
-  border-left: 5px solid @grayLighter;
+  border-left: 5px solid @grayLight;
   p {
     margin-bottom: 0;
     font-size: @baseFontSize * 1.25;
@@ -202,7 +202,7 @@ blockquote {
   small {
     display: block;
     line-height: @baseLineHeight;
-    color: @grayLight;
+    color: @gray;
     &:before {
       content: '\2014 \00A0';
     }
@@ -213,7 +213,7 @@ blockquote {
     float: right;
     padding-right: 15px;
     padding-left: 0;
-    border-right: 5px solid @grayLighter;
+    border-right: 5px solid @grayLight;
     border-left: 0;
     p,
     small {
