Updates to make it look more like a Berry site (yikes!)

--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -5,9 +5,9 @@
 
 .breadcrumb {
   padding: 8px 15px;
-  margin: 0 0 @baseLineHeight;
+  margin: -15px 0 0 0; //@baseLineHeight;
   list-style: none;
-  background-color: #f5f5f5;
+  background-color: @greenLight; //#f5f5f5;
   .border-radius(@baseBorderRadius);
   > li {
     display: inline-block;
