--- a/less/labels-badges.less
+++ b/less/labels-badges.less
@@ -7,7 +7,7 @@
 .label,
 .badge {
   display: inline-block;
-  padding: 2px 4px;
+  padding: 2px 6px;
   font-size: @baseFontSize * .846;
   font-weight: bold;
   line-height: 14px; // ensure proper line-height if floated
@@ -62,7 +62,7 @@ a {
   &-success[href]     { background-color: darken(@successText, 10%); }
   // Info (turquoise)
   &-info              { background-color: @blueLighter; }
-  &-info[href]        { background-color: darken(@blueLighter, 10%); }
+  &-info[href]        { background-color: @blueLighter; }
   // Inverse (black)
   &-inverse           { background-color: @grayDark; }
   &-inverse[href]     { background-color: darken(@grayDark, 10%); }
