Updated some colors

--- a/less/variables.less
+++ b/less/variables.less
@@ -32,6 +32,7 @@
 
 // Additional MBDA color vars 
 // --------------------------
+
 @blueLight: #88BEE7;
 @blueLighter: fade(@blueLight,50%);
 @greenLight: fade(@green,50%);
@@ -49,7 +50,7 @@
 
 // Links
 // -------------------------
-@linkColor:             @blue;
+@linkColor:             darken(@blueLight, 30%);
 @linkColorHover:        darken(@linkColor, 25%);
 
 
