After homepage updates

--- a/less/variables.less
+++ b/less/variables.less
@@ -169,7 +169,7 @@
 
 // Input placeholder text color
 // -------------------------
-@placeholderText:         @gray;
+@placeholderText:         @blueLighter;
 
 
 // Hr border color
