Support for user badges; references gsbodine/crowd-ed#27

--- a/less/mbda.less
+++ b/less/mbda.less
@@ -204,3 +204,14 @@ legend {
     color: #333;
 }
 
+i.gold {
+    color: #ff0;
+}
+
+i.silver {
+    color: #ccc;
+}
+
+i.bronze {
+    color: #c90;
+}
