Updates to homepage, community, and participate pages - mostly styling.

--- a/less/mbda.less
+++ b/less/mbda.less
@@ -227,3 +227,38 @@ i.bronze {
 img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
     max-width: 99999px;
 }
+
+.top-list {
+    background-color: #f5f5f5;
+}
+
+#berryometer h3, #berryometer p {
+    padding: .5em 1em .5em 1em;
+}
+
+#berryometer-progress-bar  {
+    margin: 1em
+}
+
+#berryometer-backdrop {
+    background: fade(#f5f5f5,75%);
+}
+
+#participate-become-editor > div.well {
+    background: #fff;
+    margin: 0;
+}
+
+#participate-learn-how > div.well {
+    background: #fff;
+    margin: 0;
+}
+
+#participate-begin-editing > div.well {
+    background: #fff;
+    margin: 0;
+}
+
+#mbda-links li {
+    padding: .5em 1em;
+}
