--- a/less/variables.less
+++ b/less/variables.less
@@ -36,7 +36,7 @@
 @blueLight: #88BEE7;
 @blueLighter: fade(@blueLight,50%);
 @greenLight: fade(@green,50%);
-@greenLighter: fade(@greenLight,50%);
+@greenLighter: lighten(@greenLight,25%);
 @brown: #562700;
 @brownLight: fade(@brown, 65%);
 @berryRed: #9F3515;
